--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,19 +1,23 @@
-name: hello-world
-on: [push, pull_request]
 name: Test
+
+on:
+  push:
+  pull_request:
+
 jobs:
-test:
-strategy:
-matrix:
-go-version: [1.15.x, 1.16.x]
-os: [ubuntu-latest]
-runs-on: ${{ matrix.os }}
-steps:
-- name: Install Go
-  uses: actions/setup-go@v2
-  with:
-    go-version: ${{ matrix.go-version }}
-- name: Checkout code
-  uses: actions/checkout@v2
-- name: Test
-  run: go test ./<your package name>
+  test:
+    strategy:
+      matrix:
+        go-version: [1.15.x, 1.16.x]
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Test
+        run: go test ./<your package name>
+
